// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render search 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with auto focus 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={true}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with custom container style 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
      {
        "backgroundColor": "#123983",
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with custom icon color 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with custom input style 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
          {
            "backgroundColor": "#654654",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with custom placeholder 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Test"
          accessibilityLabel="Test"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with custom placeholder color 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#123983"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with custom text style 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "color": "#fff",
              },
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with icon size 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with left icon 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={true}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={{}}
        >
          <View
            accessibilityLabel="Paperclip"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={{}}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="icon_paperclip"
          >
            <View>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#4255EF",
                      "fontSize": 26,
                    },
                    undefined,
                    {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {
                      "fontWeight": "900",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with padding 1`] = `
<View
  hasShadow={false}
  inputPadding={24}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 24,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        padding={24}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 24,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with right icon 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={true}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
        <View
          collapsable={false}
          style={{}}
        >
          <View
            accessibilityLabel="Search"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={{}}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="icon_search"
          >
            <View>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#4255EF",
                      "fontSize": 26,
                    },
                    undefined,
                    {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {
                      "fontWeight": "900",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with shadow 1`] = `
<View
  hasShadow={true}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Search /> should render search with wrapper height 1`] = `
<View
  hasShadow={false}
  height={24}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 24,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`SearchInput state and functions should update snapshots for search component 1`] = `
<View
  hasShadow={false}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 16,
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": 56,
        "justifyContent": "center",
        "paddingHorizontal": 32,
      },
    ]
  }
  testID="search_snapshot_test"
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        [
          {
            "justifyContent": "flex-start",
            "paddingTop": 0,
            "position": "relative",
          },
          {
            "height": "90%",
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "100%",
          },
        ]
      }
    >
      <View
        leftIcon={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibilityHint="Digite Pesquise aqui"
          accessibilityLabel="Pesquise aqui"
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
            }
          }
          accessible={true}
          allowFontScaling={false}
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          editable={true}
          iconName="search"
          iconTouchableEnabled={true}
          id="snapshot_test"
          inputRef={
            {
              "current": null,
            }
          }
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
            }
          }
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="input_snapshot_test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
